# ImageProc

./: .env  Dockerfile  Insomnia_2025-03-02.json  README.md  app.py  architecture-diagram.mermaid  docker-compose.yaml  entrypoint.sh  models.py  pyproject.toml  tasks.py  technical-documentation.md
data/: image_processor.db
outputs/: 2e51c81e-a779-4602-aca8-1d825acf0018_output.csv  a3afdb26-367c-45ba-824e-2c90adc2c334_output.csv  c135b209-a6a0-4e4f-b244-f39d0a03c2e9_output.csv  d252f745-9f42-484f-b0d1-747453b467b3_output.csv  ef48ffc5-432d-4d28-8d0e-ea90dfc1784e_output.csv
uploads/: d252f745-9f42-484f-b0d1-747453b467b3_sample_csv.csv
